2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.h (ISMETA, META, UNMETA, ISCONTROL, INFOKEY_RADIX)
	(INFOKEY_MAX_SECTIONLEN): Removed.
	* info/infokey.h, info/infomap.h (INFOKEY_FILE, A_MAX_COMMAND)
	(A_INVALID, CONTROL): Remaining definitions moved between files.
	infokey.h merged into infomap.h.

	* info/infomap.c (keymap_discard_keymap, find_function_keyseq)
	(remove_function_keyseq): Remove unused.

	(default_emacs_like_info_keys, default_emacs_like_ea_keys)
	(default_vi_like_info_keys, default_vi_like_ea_keys)
	(section_to_keymaps): Remove flag saying whether to suppress
	default keybindings.

	* info/session.c (incremental_search): Use get_input_key to distinguish
	between Escape being pressed and arrow keys.  Don't push unused key
	presses back into input buffer.

	* info/terminal.c (term_kx): Remove unused variable (same as
	term_kD).
	* info/pcterm.c (pc_initialize_terminal): Use term_kD instead of
	term_kx.

	* info/infomap.c: (read_init_file): Correct condition.
	(default_emacs_like_info_keys, default_emacs_like_ea_keys)
	(default_vi_like_info_keys, default_vi_like_ea_keys): Use KEY_DELETE
	instead of DEL to prevent duplicate key bindings in help buffer.
	* info/terminal.c (initialize_bytemap): Interpret a DEL character as
	the Delete key.
	(terminal_initialize_terminal): Remove duplicated assignments.
	* info/infodoc.c (pretty_keyseq_internal): Merged into pretty_keyseq.
	(pretty_keyseq): Use struct text_buffer.

	* info/infodoc.c (describe_key): Call get_input_key to get key press.
	* info/session.c (info_dispatch_on_key): Use tolower where intended.

	* info/doc.h (DocInfoCmd): Macro removed.  Uses updated.

	* info/infomap.c (add_function_keyseq): Don't override already recorded
	key sequences.
	(default_emacs_like_info_keys, default_vi_like_info_keys): Put
	preferred sequence to display first.

2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.h: